Fix "Tooltip in popup is hardly visible"

--- a/source/resource/designs/planet/basic.css
+++ b/source/resource/designs/planet/basic.css
@@ -715,7 +715,7 @@ position: relative;
 }
 
 #diagramTooltip, #flotTip {
-  z-index: 1000;
+  z-index: 100002;
   color: black;
   border: 1px solid #fdd;
   padding: 2px;
